# nonebot-plugin-nagabus

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr-check.yml
nonebot_plugin_nagabus/: __init__.py  ac.py  config.py  datastore.py  errors.py
nonebot_plugin_nagabus/data/: base.py  mjs.py  naga.py  naga_cookies.py  session.py
nonebot_plugin_nagabus/data/utils/: __init__.py  atomic_cache.py  pydantic.py  session.py  utc_datetime.py
nonebot_plugin_nagabus/matchers/: __init__.py  errors.py  naga_analyze.py  naga_set_cookies.py  naga_statistic.py  rule.py
nonebot_plugin_nagabus/matchers/interceptors/: access_control.py  handle_error.py  send_waiting_prompt.py
nonebot_plugin_nagabus/migrations/: 24aec3c56623_.py  70ff5fb4923e_.py  91da298b5f0c_.py  ab4d80c20047_.py
nonebot_plugin_nagabus/mjs/: __init__.py
nonebot_plugin_nagabus/naga/: __init__.py  api.py  errors.py  fake_api.py  model.py  service.py  utils.py
nonebot_plugin_nagabus/utils/: nickname.py  tz.py
tests/: conftest.py  sample_majsoul_paipu.json  test_naga_service.py
