[tool.poetry]
name = "nonebot-plugin-nagabus"
version = "0.2.10"
description = ""
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.md"
packages = [{ include = "nonebot_plugin_nagabus" }]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = {extras = ["httpx"], version = "^2.0.0"}
nonebot-adapter-onebot = ">=2.2.3"
nonebot-plugin-access-control = ">=0.5.1"
nonebot-plugin-datastore = "^1.1.0"
nonebot-plugin-get-nickname = ">=0.1.0"
nonebot-plugin-majsoul = ">=0.2.2"
nonebot-plugin-session = ">=0.0.3"
nonebot-plugin-send-anything-anywhere = ">=0.2.4"
typing-extensions = ">=4.6.2"
pydantic = ">=1.10.8"
monthdelta = ">=0.9.1"

[tool.poetry.group.dev.dependencies]
nonebot2 = { extras = ["httpx", "fastapi"], version = "^2.0.0" }
nonebot-plugin-escape-url = "^0.1.0"
nonebot-adapter-qqguild = "^0.2.2"

[tool.nonebot]
plugins = ["nonebot_plugin_nagabus"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
