[tool.poetry]
name = "nonebot-plugin-nagabus"
version = "0.3.1"
description = ""
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.md"
packages = [{ include = "nonebot_plugin_nagabus" }]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = {extras = ["httpx"], version = "^2.0.0"}
nonebot-adapter-onebot = ">=2.2.3"
nonebot-plugin-access-control-api = "^1.1.2"
nonebot-plugin-localstore = "^0.5.1"
nonebot-plugin-datastore = "^1.1.0"
nonebot-plugin-majsoul = "^0.2.5"
ssttkkl-nonebot-utils = ">=0.1.15"
nonebot-plugin-session = "^0.2.0"
nonebot-plugin-session-orm = "^0.1.0"
nonebot-plugin-send-anything-anywhere = "^0.3.0"
typing-extensions = ">=4.6.2"
pydantic = "^1.10.8"
monthdelta = ">=0.9.1"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
isort = "^5.10.1"
black = "^23.1.0"
pre-commit = "^3.1.0"

setuptools = "^68.1.2"
nonebot2 = {extras = ["httpx", "fastapi", "websockets"], version = "^2.1.2"}
nonebot-adapter-qqguild = "^0.2.2"
nonebot-plugin-escape-url = "^0.1.0"
nb-cli = "^1.2.5"
nonebot-plugin-orm = {extras = ["default"], version = "^0.5.0"}

nonebug = "^0.3.5"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "E402", "F403", "T201"]

line-length = 160
target-version = "py39"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.nonebot]
plugins = ["nonebot_plugin_nagabus"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
